terraform-eks-code/main.tf

# VPC
module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "5.1.0"

  name = "sreekanth-vpc"
  cidr = "10.10.0.0/16"

  azs             = ["us-east-1a", "us-east-1b", "us-east-1c"]
  private_subnets = ["10.10.1.0/24", "10.10.2.0/24", "10.10.3.0/24"]
  public_subnets  = ["10.10.101.0/24", "10.10.102.0/24", "10.10.103.0/24"]

  enable_nat_gateway = true
  single_nat_gateway = true

  tags = {
    Name = "sreekanth-vpc"
  }
}

# Security Group for Node Group
resource "aws_security_group" "eks_node_sg" {
  name        = "eks-node-sg"
  description = "Security group for all worker nodes in the cluster"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "Allow all node-to-node communication"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    self        = true
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all egress"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eks-node-sg"
  }
}

# EKS Cluster
module "eks" {
  source  = "terraform-aws-modules/eks/aws"
  version = "20.8.4"

  cluster_name    = "sreekanth-eks-cluster"
  cluster_version = "1.29"

  subnet_ids = module.vpc.private_subnets
  vpc_id     = module.vpc.vpc_id

  cluster_endpoint_public_access  = true
  cluster_endpoint_private_access = false
  eks_managed_node_groups = {
    default = {
      desired_size    = 2
      max_size        = 3
      min_size        = 1
      instance_types  = ["t3.medium"]
      security_groups = [aws_security_group.eks_node_sg.id]
    }
  }

  tags = {
    Environment = "dev"
  }
}

resource "aws_eks_cluster_auth" "eks_auth" {
  cluster_name = module.eks.cluster_name
  role_arn     = "arn:aws:iam::539935451710:role/YourEKSRole"

  # Use to add the IAM user to the 'system:masters' group for full access
  users = [
    {
      userarn  = "arn:aws:iam::539935451710:user/Group23-HU2"
      username = "Group23-HU2"
      groups   = ["system:masters"]
    }
  ]
}



# ECR Repository
resource "aws_ecr_repository" "app_repo" {
  name                 = "sreekanth-ecr-repo"
  image_tag_mutability = "MUTABLE"

  tags = {
    Environment = "dev"
  }
}

# Add-ons
resource "aws_eks_addon" "vpc_cni" {
  cluster_name  = module.eks.cluster_name
  addon_name    = "vpc-cni"
  addon_version = "v1.15.1-eksbuild.1"
}

resource "aws_eks_addon" "coredns" {
  cluster_name  = module.eks.cluster_name
  addon_name    = "coredns"
  addon_version = "v1.11.1-eksbuild.1"
}

resource "aws_eks_addon" "kube_proxy" {
  cluster_name  = module.eks.cluster_name
  addon_name    = "kube-proxy"
  addon_version = "v1.29.0-eksbuild.1"
}
